Adjust issue TOC font sizing and spacing

--- a/resources/less/objects/issue_toc.less
+++ b/resources/less/objects/issue_toc.less
@@ -6,7 +6,7 @@
 }
 
 .issue__header {
-	margin-bottom: 7.5vh;
+	margin-bottom: 5vh;
 }
 
 .issue__meta {
@@ -15,7 +15,7 @@
 
 .issue__title {
 	margin: 0.15em 0;
-	font-size: 2.75em;
+	font-size: 2em;
 }
 
 .issue__title {
@@ -23,7 +23,7 @@
 		display: block;
 		font-weight: 400;
 	}
-	
+
 	.issue__volume, .issue__number {
 		display: inline;
 	}
